# base-django-for-zeabur

./: pyproject.toml
hello_deta/: Spacefile  requirements.txt
