[tool.poetry]
name = "deta-test-env"
version = "0.1.0"
description = ""
authors = ["raus <applelee5814@gmail.com>"]
readme = "README.md"
packages = [{include = "deta_test_env"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "^0.26.3"
environs = "^9.5.0"
psycopg2-binary = "^2.9.6"
requests = "^2.31.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
